--- a/SavannaApp/SavannaApp.csproj
+++ b/SavannaApp/SavannaApp.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Composition" Version="1.0.31" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
   </ItemGroup>
