trying to implement MEF

--- a/SavannaApp.Tests1/SavannaApp.Tests.csproj
+++ b/SavannaApp.Tests1/SavannaApp.Tests.csproj
@@ -18,4 +18,10 @@
     <ProjectReference Include="..\SavannaApp\SavannaApp.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="Contracts">
+      <HintPath>..\DLL\Contracts.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
