--- a/SavannaApp/SavannaApp.csproj
+++ b/SavannaApp/SavannaApp.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Interfaces\IAnimal.cs" />
+    <Compile Remove="Model\Coordinates.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Composition" Version="1.0.31" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.ComponentModel.Composition" Version="4.5.0" />
@@ -13,8 +18,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="ImportingLibrary">
-      <HintPath>..\ImportingLibrary\bin\Release\netcoreapp2.1\ImportingLibrary.dll</HintPath>
+    <Reference Include="Contracts">
+      <HintPath>..\DLL\Contracts.dll</HintPath>
     </Reference>
   </ItemGroup>
 
