--- a/SavannaApp/SavannaApp.csproj
+++ b/SavannaApp/SavannaApp.csproj
@@ -11,15 +11,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Composition" Version="1.0.31" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="System.ComponentModel.Composition" Version="4.5.0" />
+    <PackageReference Include="System.Composition" Version="1.2.0" />
     <PackageReference Include="System.Linq" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
     <Reference Include="Contracts">
-      <HintPath>..\DLL\Contracts.dll</HintPath>
+      <HintPath>bin\Debug\netcoreapp2.1\Contracts.dll</HintPath>
     </Reference>
   </ItemGroup>
 
